hphp/hack/test/typecheck/construct/lateinit/lateinit6.php.exp
File "lateinit6.php", line 9, characters 14-17:
Redeclared properties must be consistently declared `__LateInit` (Typing[4282])
File "lateinit6.php", line 4, characters 14-17:
The property is not declared `__LateInit` here
